update query report visitor